пытаюсь исправить ошибки