@@ -9,8 +9,20 @@ import ru.practicum.shareit.user.model.User;
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
+/**
+ * Утилитарный класс для преобразования между DTO и моделью комментариев (Comment).
+ * Обеспечивает маппинг:
+ * - CreateCommentDto → Comment (при создании комментария);
+ * - Comment → CommentDto (при возврате данных клиенту);
+ * - List<Comment> → List<CommentDto> (при возврате списка комментариев).
+ */
 public class CommentMapper {
+
+    /**
+     * Преобразует DTO создания комментария в сущность Comment.
+     */
     public static Comment toComment(CreateCommentDto dto, Item item, User user) {
         Comment comment = new Comment();
 
@@ -22,6 +34,9 @@ public class CommentMapper {
         return comment;
     }
 
+    /**
+     * Преобразует сущность Comment в DTO для передачи клиенту.
+     */
     public static CommentDto toCommentDto(Comment comment) {
         return new CommentDto(
                 comment.getId(),
@@ -32,7 +47,15 @@ public class CommentMapper {
         );
     }
 
+    /**
+     * Преобразует список сущностей Comment в список DTO для передачи клиенту.
+     */
     public static List<CommentDto> toCommentDto(List<Comment> comments) {
-        return comments != null ? comments.stream().map(CommentMapper::toCommentDto).toList() : null;
+        if (comments == null) {
+            return null;
+        }
+        return comments.stream()
+                .map(CommentMapper::toCommentDto)
+                .collect(Collectors.toList());
     }
 }
